--- a/roles/fpm/handlers/main.yml
+++ b/roles/fpm/handlers/main.yml
@@ -2,7 +2,7 @@
 ---
 
 - name: reload php-fpm
-  when: not php_fpm_was_started.changed
+  when: not _php_fpm_was_started.changed
   service:
     name: "{{ php_fpm_service }}"
     state: reloaded
